--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.0",
     "@mdi/font": "^6.1.95",
     "@vueuse/core": "^6.4.1",
     "core-js": "^3.6.5",
