--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,3 +5,8 @@ notebook==6.4.4
 Flask==2.0.1
 pymodm==0.4.3
 Flask_RESTful==0.3.9
+Cython==0.29.24
+scipy==1.7.1
+gdown==3.13.1
+tensorboard==2.6.0
+ipywidgets==7.6.5
