--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,38 @@
-# syntax=docker/dockerfile:1
+FROM qts8n/cuda-python:9.1-runtime
 
-FROM ubuntu:21.04
-WORKDIR /app
-RUN apt update
-RUN DEBIAN_FRONTEND="noninteractive" apt install -y software-properties-common python3.9 python3-pip
+ENV PYTHON_PIP_VERSION 19.3.1
+ENV PYTHON_GET_PIP_URL https://github.com/pypa/get-pip/raw/ffe826207a010164265d9cc807978e3604d18ca0/get-pip.py
+ENV PYTHON_GET_PIP_SHA256 b86f36cc4345ae87bfd4f10ef6b2dbfa7a872fbff70608a1e43944d283fd0eee
+
+RUN set -ex; \
+	savedAptMark="$(apt-mark showmanual)"; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends wget; \
+	wget -O get-pip.py "$PYTHON_GET_PIP_URL"; \
+	echo "$PYTHON_GET_PIP_SHA256 *get-pip.py" | sha256sum --check --strict -; \
+	apt-mark auto '.*' > /dev/null; \
+	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark; \
+	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
+	rm -rf /var/lib/apt/lists/*; \
+	python get-pip.py --disable-pip-version-check --no-cache-dir "pip==$PYTHON_PIP_VERSION"; \
+	pip --version; \
+	find /usr/local -depth \
+		\( \
+			\( -type d -a \( -name test -o -name tests -o -name idle_test \) \) \
+			-o \
+			\( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
+		\) -exec rm -rf '{}' +; \
+	rm -f get-pip.py
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends libopenblas-dev \
+    	software-properties-common  \
+    && add-apt-repository ppa:ubuntu-toolchain-r/test -y \
+    && apt-get update \
+    && apt-get upgrade libstdc++6 -y \
+    && apt-get -y autoremove \
+    && apt-get -y clean
+
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
